Fix GIT configuration

--- a/example/docker-compose.yml
+++ b/example/docker-compose.yml
@@ -3,9 +3,5 @@ gitit:
   ports:
     - "4000:4000"
   restart: unless-stopped
-  environment:
-    - GIT_USER_NAME=foo
-    - GIT_USER_EMAIL=foo@bar.baz
   volumes:
-    - ./wikidata:/gitit/wikidata
-
+    - ./data:/gitit
